tests/samples/valid/dubious_conditional_definition.pn
fn main() -> i32
{
	var result = foo(7);
	return: result
}

fn foo(x: i32) -> i32
{
	var result;
	if x == 10
	{
		result = 500;
	}
	return: result
}

fn bar() -> i32
{
	var result: i32;
	return: result
}

fn baz() -> i32
{
	var result;
	goto return;
	result = 10;
	return: result
}
