tests/samples/invalid/duplicate_label.pn
fn main() -> i32
{
	var x = 33;

	goto foo;

	x = 100;

	foo:

	x = 100;

	goto return;

	foo:

	x = 7;

	return:
	x
}
